@@ -44,7 +44,7 @@ Please refer to the detailed license information as shown below:
   <td>CTreeView</td>
 </tr>
 <tr>
-  <td><a href="http://plugins.jquery.com/project/MultipleFriendlyStarRating">jQuery Star Rating 2.61</a></td>
+  <td><a href="http://www.fyneworks.com/jquery/star-rating/">jQuery Star Rating 2.61</a></td>
   <td><a href="http://www.opensource.org/licenses/mit-license.php">MIT</a></td>
   <td>CStarRating</td>
 </tr>
