@@ -13,6 +13,7 @@ Version 1.0.4 to be released
 - Bug #199: yiic webapp command may fail in some directory setup (Qiang)
 - Bug #200: CDateFormatter does not recognize timestamp given as a string (Qiang)
 - Bug #205: CTRL-D puts yiic into endless loop (olafure)
+- Bug #206: Property "click" in CStarRating does not work (Qiang)
 - Bug: Setting the 'expression' option in an access url causes error (Qiang)
 - Bug: CAccessRule.roles should be case sensitive (Qiang)
 - Bug: CDbAuthManager::checkDefaultRoles() uses an undefined variable (Qiang)
